--- a/.env
+++ b/.env
@@ -1,39 +1,24 @@
 # Django Secret Key (for security, replace with a strong secret key)
-SECRET_KEY = 'my_secret_key'
+SECRET_KEY = 'django-insecure-duu5@8-tnbop9hu^csgabor$de#qt)hgo8vh9%dtbbh!80&2u6'
 
 # Database Settings (using SQLite for local development)
-DATABASE_ENGINE = 'django.db.backends.sqlite3'  #if you want use other database need change this settings
-DATABASE_NAME = 'db.sqlite3'  #if you want use other database need change this settings
+DATABASE_ENGINE = 'django.db.backends.sqlite3'
+DATABASE_NAME = 'db.sqlite3'
 
 # Site Name
-SITE_NAME = 'To-Do-List' #your site name 
+SITE_NAME = 'To-Do-List'
 
 # Celery Broker URL (Using Redis as a message broker)
-CELERY_BROKER_URL = "redis://127.0.0.1:6379/0"      #if you use other thing like rabit you should change this 
-CELERY_RESULT_BACKEND = "redis://127.0.0.1:6379/0"  #if you use other thing like rabit you should change this 
 
-# Celery Task Serialization and Content Acceptance
-CELERY_ACCEPT_CONTENT = ['json']
-CELERY_TASK_SERIALIZER = 'json'
-CELERY_RESULT_SERIALIZER = 'json'
-CELERY_DEBUG = "DEBUG"
-
-# Celery Timezone (UTC by default)
-CELERY_TIMEZONE = 'UTC'
 
 # Celery Beat Schedule (Define your periodic tasks here)
-CELERY_BEAT_SCHEDULE = {
-    'my-periodic-task': {
-        'task': 'td_apps.core.tasks',  # Replace with your task path
-        'schedule': crontab(minute=1, hour=0),  # Example: run daily at midnight
-    },
-}
+
 
 # Email settings
-EMAIL_BACKEND = 'sample' #your email Backend 
-EMAIL_HOST = 'sample' #your email host
-EMAIL_PORT = sample
-EMAIL_USE_TLS = sample
-EMAIL_HOST_USER = 'sample'  # Replace with your Gmail address
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 586
+EMAIL_USE_TLS = True
+EMAIL_HOST_USER = 'marashipouya@gmail.com'  # Replace with your Gmail address
 EMAIL_HOST_PASSWORD = 'sample'  # Replace with your App Password
-DEFAULT_FROM_EMAIL = "sample"  # your default_from_email
+DEFAULT_FROM_EMAIL = "myapp"
